Add admin subcommands and validation for attribute tools